# itm_2025_soa_u5

./: .env  .gitignore  docker-compose.yml  package-lock.json  package.json
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
openapi/: README.md  usuarios.json
services/ajedrez/: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  rustfmt.toml
services/ajedrez/migrations/2025-05-07-215758_initial/: down.sql  up.sql
services/ajedrez/src/: config.rs  db.rs  lib.rs  models.rs  schema.rs
services/ajedrez/tests/: test_session.rs
services/balatro-backend/: app.py  db.py  game_state.py  requirements.txt
services/balatro-backend/services/: score_handler.py
services/balatro-backend/static/css/: main.css  player_cards.css
services/balatro-backend/static/js/: main.js  player_cards.js
services/balatro-backend/templates/: index.html
services/balatro-frontend/: Dockerfile  app.py  game_state.py  requirements.txt
services/balatro-frontend/services/: deck_handler.py  score_handler.py
services/balatro-frontend/static/css/: leaderboard.css  main.css  player_cards.css
services/balatro-frontend/templates/: index.html  leader_board.html
services/conecta4-backend/: Dockerfile  backend.py  conecta4_logic.py
services/conecta4-frontend/: Dockerfile  index.html  nginx.conf  script.js  style.css
services/connect4-game/: .env  Dockerfile  README.md  package-lock.json  package.json
services/frontend/: .env  Dockerfile  generate-clients.ts  index.html  package-lock.json  package.json
services/frontend/src/: main.tsx  routeTree.gen.ts  theme.tsx  utils.ts
services/memorama/: README.md
services/memorama-backend/: Dockerfile  README.md  pyproject.toml
services/memorama-backend/app/: cli.py  game.py  models.py
services/memorama-backend/app/core/: db.py
services/memorama-frontend/: Dockerfile  index.html  nginx.conf  package.json
services/memorama-frontend/src/: App.jsx  main.jsx
services/memorama/app/: main.py  websocket.py
services/memorama/frontend/: jsconfig.json  package-lock.json  vite.config.ts
services/picas-backend/: Dockerfile  README.md  game.py  main.py  models.py  pyproject.toml
services/picas-backend/app/: database.py  db_models.py  game.py  game_manager.py  main.py  models.py
services/picas-frontend/: Dockerfile  index.html  leaderboard.css  leaderboard.html  leaderboard.js  nginx.conf  script.js  styles.css
services/pokemon/: .env  Dockerfile  README.md  package-lock.json  package.json
services/pokemon/src/: app.js  server.js
services/usuarios/: .env  .gitignore  Dockerfile  README.md  pyproject.toml
services/usuarios/app/: cli.py  login.py  main.py  models.py
services/usuarios/app/core/: config.py  db.py  deps.py  security.py
services/usuarios/tests/: conftest.py  test_login.py
services/usuarios/tests/utils/: user.py
(+62 files in other folders)
